Wed Sep 05 12:00:42 2001  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix4_g++.GNU: Sets ACE_AIX_VERS rather
          than separate major/minor; see entry below for further info.

Wed Sep 05 11:52:39 2001  Steve Huston  <shuston@riverace.com>

        * ace/config-aix5.1.h: New config file for AIX 5L, version 5.1,
          using Visual Age C++ 5.

        * ace/config-aix-4.1.x.h:
        * ace/config-aix-4.2.x.h:
        * ace/config-aix-4.3.x.h:
        * ace/config-aix-4.x.h: Use ACE_AIX_VERS (which has both major and
          minor version) rather than ACE_AIX_MAJOR_VERS and ACE_AIX_MINOR_VERS.

        * include/makeinclude/platform_aix_ibm.GNU: Rather than making
          separate major/minor OS version variables, use one that incorporates
          both to make it easier for config.h files to set upwardly-compatible
          feature flags.

Wed Sep  5 06:55:44 2001  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Log_Msg_Test.cpp:

          Add ACE_TEXT() around the default program name for the Windows
          WChar Unicode build.

Tue Sep  4 18:48:00 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Select_Reactor_Base.cpp: Changed the value returned from
	  ACE_Select_Reactor_Notify_Handler::handle_input (). This now
	  returns a 0 if we did not dispatch any handles or the number of
	  handles dispatched. We were returning a -1 if we did not
	  dispatch any handles, after reading the notification from the
	  pipe. This should fix the Reactor_Notify_Test in the Implicit
	  templates build.

Tue Sep  4 12:46:50 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ACE.cpp: Reverted this change "Tue Sep  4 07:37:17 2001
	  Balachandran Natarajan  <bala@cs.wustl.edu>". Thanks to Irfan
	  for pointing that this change, changes the semantics of the
	  methods. 

Tue Sep  4 09:14:36 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/CDR_Stream.i:
        * ace/CDR_Stream.cpp:
