@@ -190,6 +190,8 @@ public:
   /// Dump the state of an object.
   void dump (void) const;
 
+  void set_nic (const char *option_value);
+
   /// Declare the dynamic allocation hooks.
   ACE_ALLOC_HOOK_DECLARE;
 
